# git-squash

./: README.md  pyproject.toml
.github/workflows/: publish.yml
git_squash/: __init__.py  cli.py  squash.py
