[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-squash"
version = "0.1.0"
description = "Flatten entire git history to a single commit"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "Tyler Henthorn", email = "catty-chump-tipper@duck.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
git-squash = "git_squash.cli:main"
